--- a/styles/header.css
+++ b/styles/header.css
@@ -145,7 +145,9 @@ html {
       .menu nav a {
           font-size: 16px;
       }
-  
 
+      .menu nav a:hover::after {
+         width: 100px;
+      }
 
   }
